using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationStrings
{
   
    internal static string isMoving = "IsMoving";
    internal static string isRunning = "IsRunning";
    internal static string isSuperRunning = "IsSuperRunning";
    internal static string isGrounded = "IsGrounded";
    internal static string yVelocity = "Yvelocity";
    internal static string jump = "Jump";
    internal static string isOnWall = "IsOnWall";
    internal static string isOnCeiling = "IsOnCeiling";
    internal static string attack = "Attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "HasTarget";
    internal static string isAlive = "IsAlive";
    internal static string isHit = "IsHit";
    internal static string hit = "Hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string AttackCooldown = "AttackCooldown";
    internal static string heal = "Heal";
    internal static string rangeAttack = "RangeAttack";
    internal static string hasTarget1 = "HasTarget1";
    internal static string hasTarget2 = "HasTarget2";
    internal static string crouched = "Crouched";
    internal static string canWallJump = "canWallJump";
    internal static string canReduceArrows = "LessArrows";
    internal static string climb = "Climb";




}
